--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "peerDependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "styled-components": "^5.0.0-beta.8",
+    "styled-components": "^4.3.2",
     "styled-system": "^5.0.16"
   },
   "devDependencies": {
