--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "lazysizes": "^5.1.0",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
-    "ramda-adjunct": "^2.18.0"
-  },
-  "peerDependencies": {
+    "ramda-adjunct": "^2.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2",
