fix: Restore css prop behaviour
Styled Components’ support for the ‘CSS Prop’ requires _both_ the Babel styled components plugin _and_ the CSS prop to be declared directly on the target component.

i.e. Passing it as a k/v pair on a props object won’t work!!

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
     "babel-loader": "^8.0.6",
+    "babel-plugin-styled-components": "^1.10.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "neutrino": "^8.3.0"
   }
