--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "neutrino start",
     "build": "neutrino build",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "neutrino test"
   },
   "keywords": [
     "react",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@neutrinojs/jest": "^8.3.0",
     "@neutrinojs/react-components": "^8.3.0",
     "@storybook/addon-actions": "^5.1.9",
     "@storybook/addon-backgrounds": "^5.1.9",
@@ -48,7 +50,9 @@
     "@storybook/react": "^5.1.9",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
+    "enzyme": "^3.10.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "neutrino": "^8.3.0"
+    "neutrino": "^8.3.0",
+    "react-addons-test-utils": "^15.6.2"
   }
 }
