--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
     "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "jest-styled-components": "^6.3.3",
     "neutrino": "^8.3.0",
     "react-addons-test-utils": "^15.6.2"
   }
